--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <header>
 
-  (ↄ)|<a href="index.html">Jai Ramanathan</a>
-  |<a href="xxxx/index.html>fyfff</a>
+  (ↄ)|<a href="https://bluewworks.github.io">Jai Ramanathan</a>
+  |<a href="https://bluewworks.github.io/Projects/">fyfff</a>
   |
 </header>
 
-<h1>This is the main template for all pages in this website<h1>
-Pls click view source to see code
-
+<h1>Projects<h1>
