--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <header>
 
   (ↄ)|<a href="https://bluewworks.github.io">Jai Ramanathan</a>
-  |<a href="https://bluewworks.github.io/Projects/">fyfff</a>
+  :<a href="https://bluewworks.github.io/Projects/">Projects</a>
   |
 </header>
 
